force-app/main/default/objects/Course_Attendance__c/Course_Attendance__c.object-meta.xml
<CustomObject>
    <description>To track the course attendance of each participant</description>
    <label>Course Attendance</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Course Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>