force-app/main/default/objects/Course_Attendance__c/fields/Attend_Date_Full__c.field-meta.xml
<CustomField>
    <fullName>Attend_Date_Full__c</fullName>
    <formula>LPAD(Text(Day(Attendance_Date__c)), 2 ,&quot;0&quot;)  &amp; &quot;/&quot; &amp;
LPAD(Text(Month(Attendance_Date__c)), 2 ,&quot;0&quot;)  &amp; &quot;/&quot; &amp;
Text(Year(Attendance_Date__c)) &amp; &quot; (&quot; &amp;
Attendence_Date_Day__c  &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attend Date Full</label>
    <type>Text</type>
</CustomField>