force-app/main/default/objects/Course_Attendance__c/fields/Attendence_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Attendence_Date_Day__c</fullName>
    <formula>CASE( MOD( Attendance_Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sun&quot;, 1, &quot;Mon&quot;, 2, &quot;Tue&quot;, 3,
&quot;Wed&quot;, 4, &quot;Thu&quot;, 5, &quot;Fri&quot;, 6, &quot;Sat&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendence Date Day</label>
    <type>Text</type>
</CustomField>