force-app/main/default/objects/Course_Attendance__c/fields/Course_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Course_Attendee__c</fullName>
    <formula>Course_Registration__r.Name  +&apos; : &apos;+ Course_Registration__r.First_Name__c  + &apos; &apos; +  Course_Registration__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Attendee</label>
    <type>Text</type>
</CustomField>