force-app/main/default/objects/Course_Attendance__c/fields/Course_Registration__c.field-meta.xml
<CustomField>
    <fullName>Course_Registration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Registration</label>
    <referenceTo>Course_Registration__c</referenceTo>
    <relationshipLabel>Course Attendances</relationshipLabel>
    <relationshipName>Course_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>