force-app/main/default/objects/Course_Attendance__c/fields/Course_Run__c.field-meta.xml
<CustomField>
    <fullName>Course_Run__c</fullName>
    <formula>Course_Registration__r.Course_Run_Id__r.Name +&apos; : &apos; +  Course_Registration__r.Course_Run_Id__r.Course_Run_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Run</label>
    <type>Text</type>
</CustomField>