force-app/main/default/objects/Course_Attendance__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM Session</fullName>
            </value>
            <value>
                <fullName>PM Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>